# broadworks_ocip

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: _docs.yml  _full_tests.yml  _test.yml  _upload.yml  release.yml
api/api/: index.html
api/base/: index.html
api/exceptions/: index.html
api/types/: index.html
broadworks_ocip/: base.py
changelog/: index.html
contributing/: index.html
internals/: index.html
license/: index.html
todo/: index.html
usage/: index.html
utilities/: process_schema.py
