[project]
name = "broadworks_ocip"
version = "3.0.0"
description = "API interface to the OCI-P provisioning interface of a Broadworks softswitch"
requires-python = ">=3.9.0"
authors = [
  { name = "Nigel Metheringham", email = "nigelm@cpan.org" },
  { name = "staticdev", email = "staticdev-support@proton.me" }
]
license = {text = "BSD"}
readme = "README.md"
homepage = "https://pypi.org/project/broadworks-ocip/"
repository = "https://github.com/nigelm/broadworks_ocip"
documentation = "https://nigelm.github.io/broadworks_ocip/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "README.md",
    "tests/*",
    "docs/*"
]
exclude = [
    "**/__pycache__",
    "**/*.py[oc]"
]

dependencies = [
    "lxml>=5.4.0",
    "attrs>=21.4.0",
    "null-object>=0.1.0",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "mkdocs-material>=8.1.7",
    "mkdocs>=1.2.1",
    "mkdocstrings>=0.29.0",
    "nox>=2024.10.9",
    "py-markdown-table>=0.2.2",
    "pytest>=8.3.5",
    "python-semantic-release>=7.23.0",
    "markdown-include>=0.8.1",
    "toposort>=1.7",
    "xmlschema>=1.9.2",
]

[tool.semantic_release]
branch = "master"
version_toml = [ "pyproject.toml:project.version" ]
version_pattern = [
    'README.md:Version: `(\d+\.\d+\.\d+)`',
    'broadworks_ocip/__init__.py:__version__ = "(\d+\.\d+\.\d+)"',
]
version_source = "tag"
commit_version_number = true
patch_without_tag = true
build_command = "uv build"
upload_to_pypi = false
check_build_status = false

# ruff is a replacement for flake8
[tool.ruff]
line-length = 150
lint.ignore = ["F821"]
lint.isort.case-sensitive = true
lint.isort.force-single-line = true
lint.isort.force-sort-within-sections = true

# end

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
